[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/Ball.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Ball.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/sfx/synth_beep_02.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/sfx/shot_02.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/sfx/retro_misc_05.ogg" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 8.49959

[node name="Ball" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="BlockHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="GeneralHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="FloorHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
